add ut and github action

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,5 +27,11 @@ dependencies = [
 [tool.hatch.build.targets.wheel]
 packages = ["src/alibaba_cloud_ops_mcp_server"]
 
+[dependency-groups]
+dev = [
+    "pytest>=8.4.0",
+    "pytest-cov>=6.1.1",
+]
+
 [project.scripts]
 alibaba-cloud-ops-mcp-server = "alibaba_cloud_ops_mcp_server:main"
