--- a/.github/workflows/qodo-cover-pr.yaml
+++ b/.github/workflows/qodo-cover-pr.yaml
@@ -3,7 +3,7 @@ name: Qodo Cover PR (Auto Test Generation)
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 permissions:
   pull-requests: write
@@ -21,11 +21,14 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install uv
+        run: |
+          pip install uv
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pytest-cov
+          uv pip install -e .
+          uv pip install pytest pytest-cov
 
       - name: Run qodo-cover-pr
         uses: qodo-ai/qodo-ci/.github/actions/qodo-cover-pr@v0.1.12
@@ -37,7 +40,7 @@ jobs:
           coverage_type: cobertura
           test_command: "pytest --cov=. --cov-report=xml --cov-report=term"
           model: qwen-max # 这里替换为你的Qwen模型名
-          llm_base_url: https://dashscope.aliyuncs.com/compatible-mode/v1 # 这里替换为你的Qwen API地址
+          llm_base_url: https://dashscope.aliyuncs.com/api/v1/services/aigc/text-generation/generation # 这里替换为你的Qwen API地址
           max_iterations: 3
           desired_coverage: 100
           run_each_test_separately: true
