--- a/.github/workflows/qodo-cover-pr.yaml
+++ b/.github/workflows/qodo-cover-pr.yaml
@@ -3,7 +3,7 @@ name: Qodo Cover PR (Aut Test Generation)
 on:
   pull_request:
     branches:
-      - main
+      - master
 
 permissions:
   pull-requests: write
