--- a/.github/workflows/qodo-cover-pr.yaml
+++ b/.github/workflows/qodo-cover-pr.yaml
@@ -1,4 +1,4 @@
-name: Qodo Cover PR (Aut Test Generation)
+name: Qodo Cover PR (Auto Test Generation)
 
 on:
   pull_request:
@@ -27,8 +27,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install -e .
-          uv pip install pytest pytest-cov
+          uv pip install -e . --system
+          uv pip install pytest pytest-cov --system
 
       - name: Run qodo-cover-pr
         uses: qodo-ai/qodo-ci/.github/actions/qodo-cover-pr@v0.1.12
