--- a/.github/workflows/qodo-cover-pr.yaml
+++ b/.github/workflows/qodo-cover-pr.yaml
@@ -31,7 +31,7 @@ jobs:
           uv pip install pytest pytest-cov --system
 
       - name: Run qodo-cover-pr
-        uses: qodo-ai/qodo-ci/.github/actions/qodo-cover-pr@v0.1.12
+        uses: ./.github/actions/qodo-cover-pr
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           project_language: python
@@ -45,5 +45,6 @@ jobs:
           source_folder: .
           test_folder: .
           additional_instructions: "所有生成的测试必须包含详细中文docstring，且需标注'本测试用例由Qodo Cover自动生成'"
+          api_base: "https://dashscope.aliyuncs.com/compatible-mode/v1"
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }} 
