--- a/.github/workflows/qodo-cover-pr.yaml
+++ b/.github/workflows/qodo-cover-pr.yaml
@@ -36,7 +36,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           project_language: python
           project_root: .
-          model: openai/qwen-max
+          model: qwen-max
           code_coverage_report_path: ./coverage.xml
           coverage_type: cobertura
           test_command: "pytest --cov=. --cov-report=xml --cov-report=term"
