--- a/.github/workflows/qodo-cover-pr.yaml
+++ b/.github/workflows/qodo-cover-pr.yaml
@@ -31,12 +31,12 @@ jobs:
           uv pip install pytest pytest-cov --system
 
       - name: Run qodo-cover-pr
-        uses: ./.github/actions/qodo-cover-pr
+        uses: qodo-ai/qodo-ci/.github/actions/qodo-cover-pr@v0.1.12
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           project_language: python
           project_root: .
-          model: openai/qwen-max-latest
+          model: gpt-4o
           code_coverage_report_path: ./coverage.xml
           coverage_type: cobertura
           test_command: "pytest --cov=. --cov-report=xml --cov-report=term"
@@ -46,6 +46,5 @@ jobs:
           source_folder: .
           test_folder: .
           additional_instructions: "所有生成的测试必须包含详细中文docstring，且需标注'本测试用例由Qodo Cover自动生成'"
-          api_base: "https://dashscope.aliyuncs.com/compatible-mode/v1"
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }} 
