--- a/.github/workflows/qodo-cover-pr.yaml
+++ b/.github/workflows/qodo-cover-pr.yaml
@@ -36,7 +36,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           project_language: python
           project_root: .
-          model: gpt-4o-2024-05-13
+          model: openai/qwen-max
           code_coverage_report_path: ./coverage.xml
           coverage_type: cobertura
           test_command: "pytest --cov=. --cov-report=xml --cov-report=term"
@@ -46,6 +46,6 @@ jobs:
           source_folder: .
           test_folder: .
           additional_instructions: "所有生成的测试必须包含详细中文docstring，且需标注'本测试用例由Qodo Cover自动生成'"
-          api_base: "https://api.aihao123.cn/luomacode-api/open-api/v1"
+          api_base: "https://dashscope.aliyuncs.com/compatible-mode/v1"
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }} 
