--- a/.github/workflows/qodo-cover-pr.yaml
+++ b/.github/workflows/qodo-cover-pr.yaml
@@ -3,7 +3,7 @@ name: Qodo Cover PR (Auto Test Generation)
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 permissions:
   pull-requests: write
