--- a/.github/workflows/qodo-cover-pr.yaml
+++ b/.github/workflows/qodo-cover-pr.yaml
@@ -38,7 +38,7 @@ jobs:
           project_root: .
           code_coverage_report_path: ./coverage.xml
           coverage_type: cobertura
-          test_command: "pytest --cov=. --cov-report=xml --cov-report=term"
+          test_command: "uv run pytest --cov=src --cov-report=term-missing"
           max_iterations: 3
           desired_coverage: 100
           run_each_test_separately: true
